--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-hacke
+title: Welcome to benjaminclark964's home page!
+description: This page contains some of coding projects
