--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacke
 title: Welcome to benjaminclark964's home page!
-description: This page contains some of coding projects
+description: This page contains some of my *coding* **projects**
